# AutoDeployPi

./: .gitignore  README.md  add_repo.py  app.py  helpers.py  pyproject.toml  setup.py
supervisor/: supervisord.conf.template
