[tool.poetry]
name = "autodeploypi"
version = "0.1.0"
description = "Automatically deploy any github repo to your pi, or any other linux server!"
authors = ["Aucke Bos <aucke.bos97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
